# quantum-safe-optimization

./: .env  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .vercelignore  AGENTS.md  ALL_ISSUES_FIXED.md  ARCHITECTURE_FIXES_NEXT_STEPS.md  ARCHITECTURE_FIXES_REPORT.md  AUDIT_REPORT.md  CHANGELOG.md  CODE_QUALITY_IMPROVEMENTS_SUMMARY.md  CODE_REVIEW_REPORT.md  COMPETITIVE_ADVANTAGE.md  COMPLETION_REPORT.md  COMPREHENSIVE_ANALYSIS_AND_PLAN.md  COMPREHENSIVE_IMPLEMENTATION_SUMMARY.md  COMPREHENSIVE_IMPROVEMENT_PLAN.md  CONNECTION_FIXED.md  CONTRIBUTING.md  CRITICAL_FIXES_IMPLEMENTATION_SUMMARY.md  DASHBOARD_ISSUES_ANALYSIS.md  DELIVERABLES_PACKAGE.md  Dockerfile  FINAL_ALL_ITEMS_VERIFIED_COMPLETE.md  FINAL_COMPLETION_CHECK.md  FINAL_COMPREHENSIVE_REPORT.md  FINAL_IMPLEMENTATION_REPORT_COMPLETE.md  FINAL_PROGRESS_REPORT.md  FINAL_VERIFICATION_CHECKLIST_COMPLETE.md  FRONTEND_ERRORS_FIXED.md  GITHUB-DESKTOP-QUICK-GUIDE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_COMPLETE_FINAL.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS.md  IMPROVEMENTS_AND_FIXES.md  LICENSE  PHASE2_INTEGRATION.sh  (+44 more)
.github/workflows/: ci-cd.yml  ci.yml  security-scan.yml
.orchids/: orchids.json
.playwright-mcp/: job-comparison-1772485883207.json
.vibe/: progress-20250301-phase1-complete.md  progress-20250301.md  work-20250301.md
alembic/: env.py
alembic/versions/: 001_initial.py  002_indexes.py
api/: app_factory.py  audit_export.py  auth_stores.py  circuit_breaker.py  config.py  di_container.py  exceptions.py  key_rotation.py  logging_config.py  main.py  performance.py  requirements.txt  telemetry.py  tracing.py
api/alerts/: router.py
api/algorithms/: registry.py
api/analytics/: ml_insights.py  service.py
api/benchmarks/: suite.py
api/billing/: __init__.py  models.py  router.py
api/cache/: cache.py  result_cache.py
api/circuits/: __init__.py  router.py
api/db/: __init__.py  connection_pool.py  cosmos.py  query_optimizer.py  repository.py
api/dependencies/: auth.py
api/export/: service.py
api/federation/: __init__.py  models.py  multi_region.py  router.py
api/graphql/: __init__.py  router.py  schema.py
api/grpc/: quantum.proto  server.py
api/marketplace/: __init__.py  models.py  router.py
api/middleware/: profiling.py
api/models/: __init__.py  auth.py  jobs.py
api/notifications/: service.py
api/provenance/: blockchain.py
api/quantum/: error_correction.py  error_mitigation.py  hybrid_engine.py  hybrid_optimization.py  qec_simulator.py  qkd_simulation.py  qml_integration.py  qv_benchmark.py
api/routers/: __init__.py  analytics.py  anomaly.py  api_keys.py  auth.py  auth_demo.py  backends.py  batch.py  caching.py  costs.py  credentials.py  demo_mode.py  health.py  health_aggregation.py  health_v2.py  jobs.py  jobs_submit.py  metrics.py  oauth.py  performance.py  performance_dashboard.py  scheduling.py  websocket.py
api/schemas/: errors.py  problem_config.py
api/security/: __init__.py  anomaly_detection.py  api_key_rotation.py  csrf.py  demo_mode.py  event_sourcing.py  input_validation.py  jwt_config.py  mfa.py  middleware.py  rate_limit_backup.py  rate_limiter.py  result_encryption.py  secrets_manager.py  signature_verification.py  ssrf_protection.py  (+2 more)
benchmarks/: __init__.py
crypto/: BUILD.md  Cargo.toml  build.py
crypto/src/: encryption.rs  error.rs  kem.rs  lib.rs  signatures.rs
deploy/: otel-collector-config.yaml  prometheus.yml
docs/: API.md  API_REFERENCE.md  COMPREHENSIVE_ANALYSIS.md  DEPLOYMENT.md  DISASTER_RECOVERY.md  ENHANCEMENT_SUMMARY.md  MIGRATION.md  PHASE2_ANALYSIS.md  RESEARCH_FEATURES.md  SECURITY.md
examples/: demo_envelope_encryption.py  demo_hybrid_optimization.py  maxcut_problem.json  portfolio_optimization.json  qsop_advanced_features.ipynb
frontend/: DEPLOYMENT.md  dashboard-simple.html  dashboard.html  index.html  manifest.json  nginx.conf  package.json  research-demo.html  robots.txt  simple.html  sitemap.xml  sw.js  test.html  tsconfig.json  vite.config.js
frontend-react/: README.md  index.html  package.json  tailwind.config.js
jupyter_qsop/: __init__.py
monitoring/: alerts.yml  grafana-dashboard.json  prometheus.yml
optimization/: README.md  pyproject.toml
optimization/src/: __init__.py
optimization/src/annealing/: __init__.py  problems.py  runner.py
optimization/src/backends/: __init__.py  advanced_simulator.py  aws.py  azure.py  base.py  connection_manager.py  dwave.py  ibm.py  simulator.py
optimization/src/qaoa/: __init__.py  problems.py  runner.py
optimization/src/vqe/: __init__.py  hamiltonians.py  runner.py
qsop_client/: README.md  __init__.py  examples.py  tests.py
quantum_safe_client/: README.md  __init__.py  client.py  exceptions.py  models.py  setup.py
scripts/: decrypt_client.py  deploy.ps1  deploy.sh  qsop_cli.py
tests/: __init__.py  test_advanced_simulator.py  test_api.py  test_api_integration.py  test_backend_connections.py  test_cache_comprehensive.py  test_connection_pool.py  test_crypto.py  test_database.py  test_graphql.py  test_input_validation_comprehensive.py  test_integration.py  test_load.py  test_mlkem_decryption.py  test_mlkem_integration.py  test_observability.py  test_optimization.py  test_performance_benchmark.py  test_qec.py  test_qv_benchmark.py  test_security.py  test_webhooks.py  test_websocket.py
vercel_api/: index.py  requirements.txt
(+323 files in other folders)
