[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quantum-secure-opt"
version = "0.1.0"
description = "Quantum-Safe Secure Optimization Platform"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "QSOP Team", email = "team@qsop.dev" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy[asyncio]>=2.0.25",
    "alembic>=1.13.0",
    "redis>=5.0.0",
    "cryptography>=42.0.0",
    "liboqs-python>=0.9.0",
    "qiskit>=1.0.0",
    "qiskit-aer>=0.13.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "httpx>=0.26.0",
    "tenacity>=8.2.0",
    "structlog>=24.1.0",
    "prometheus-client>=0.19.0",
    "opentelemetry-api>=1.22.0",
    "opentelemetry-sdk>=1.22.0",
    "opentelemetry-instrumentation-fastapi>=0.43b0",
    "websockets>=12.0",
    "scikit-learn>=1.3.0",
    "pandas>=2.1.0",
    "plotly>=5.18.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
    "black>=24.1.0",
    "pre-commit>=3.6.0",
    "httpx>=0.26.0",
]
gpu = [
    "cupy-cuda11x>=12.0.0",
]
ml = [
    "scikit-learn>=1.3.0",
    "qiskit-machine-learning>=0.7.0",
    "torch>=2.0.0",
]
full = [
    "quantum-secure-opt[dev,gpu,ml]",
]

[project.scripts]
qsop = "qsop.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/qsop"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "S",   # flake8-bandit
    "T20", # flake8-print
]
ignore = ["E501"]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.coverage.run]
source = ["src/qsop"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
