[package]
name = "quantum_safe_crypto"
version = "0.1.0"
edition = "2021"
authors = ["Quantum-Safe Team"]
description = "Post-Quantum Cryptography module for Quantum-Safe Optimization Platform"
license = "MIT"

[lib]
name = "quantum_safe_crypto"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Post-Quantum Cryptography - All security levels
pqcrypto-kyber = "0.8"
pqcrypto-dilithium = "0.5"
pqcrypto-traits = "0.3"

# Symmetric encryption
aes-gcm = "0.10"
rand = "0.8"
hkdf = "0.12"
sha2 = "0.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
hex = "0.4"

# Python bindings
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py311"] }

# Error handling
thiserror = "1.0"

[dev-dependencies]
criterion = "0.5"

[profile.release]
opt-level = 3
lto = true
