[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quantum-optimization"
version = "0.1.0"
description = "Quantum Optimization Algorithms for the Quantum-Safe Secure Optimization Platform"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Quantum-Safe Team" }
]
keywords = ["quantum", "optimization", "qaoa", "vqe", "post-quantum", "cryptography"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "pennylane>=0.35.0",
    "qiskit>=1.0.0",
    "qiskit-aer>=0.14.0",
    "qiskit-ibm-runtime>=0.20.0",
    "dwave-ocean-sdk>=6.0.0",
    "amazon-braket-sdk>=1.70.0",
    "networkx>=3.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
azure = [
    "azure-quantum>=0.28.0",
]

[project.urls]
Homepage = "https://github.com/your-org/quantum-safe-optimization"
Documentation = "https://github.com/your-org/quantum-safe-optimization#readme"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
